# Mac-VSCode-CPP-Starting-Template

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  calculator_bench.cpp  logger_bench.cpp  multithread_share_stateful_demo.cpp
include/boost/: di.hpp
output/: all_tests  main
src/: app.cpp  app.h  main.cpp
src/calculator/: calculator.cpp  calculator.h
src/logger/: console_logger.cpp  console_logger.h  ilogger.h
tests/: CMakeLists.txt  calculator_test.cpp  hello_world_test.cpp  logger_test.cpp
